--- a/README.adoc
+++ b/README.adoc
@@ -6,10 +6,12 @@ An example of using vagrant, and some puppet, to spin up a TeamCity box using a 
 WARNING: This turns down the firewalld service to use the service on http://localhost:18111.
 
 This uses a plugin to keep the virtualbox extension noise/warnings to a minimum
-# vagrant plugin install vagrant-vbguest
+
+ vagrant plugin install vagrant-vbguest
 
 To use an internal proxy. Handy for caching all the goodness these things use.
-# vagrant plugin install vagrant-proxyconf
+
+ vagrant plugin install vagrant-proxyconf
 
 Once this spins up ('vagrant up'), you should be able to go to http://localhost:18111 and run through the first start wizard. The data location is preset using a properties file in provisioning/resources. Change it either place. The teamcity.sh script isn't idemponent in that once the "First Start" runs the whole service is present and reprovisioning doesn't do much.
 
